# shop-agent

./: .gitignore  pyproject.toml
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  meta_config.py
app/core/: log.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/mysql/meta/mappers/: column_info_mapper.py  column_metric_mapper.py  metric_info_mapper.py  table_info_mapper.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py
conf/: app_config.yaml
docker/: docker-compose.yaml
docker/elasticsearch/: Dockerfile
docker/mysql/: dw.sql  init.sql  meta.sql
examples/: qdrant_quickstart_demo.py
prompts/: correct_sql.prompt  extract_keywords.prompt  generate_sql.prompt
