[project]
name = "shopkeeper-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "asyncmy>=0.2.11",
    "cryptography>=47.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.128.8",
    "greenlet>=3.2.5",
    "huggingface-hub>=1.8.0",
    "jieba>=0.42.1",
    "langchain>=0.3.30",
    "langchain-deepseek>=0.1.4",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.11",
    "loguru>=0.7.3",
    "omegaconf>=2.3.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.12.0,<1.17.0",
    "sqlalchemy>=2.0.51",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
